tket2-hseries/src/llvm/snapshots/tket2_hseries__llvm__qsystem__test__emit_qsystem_codegen@llvm14_7.snap
---
source: tket2-hseries/src/llvm/qsystem.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define void @_hl.main.1(i64 %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  call void @___qfree(i64 %0)
  ret void
}

declare void @___qfree(i64)
